--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
 	"Programming Language :: Python :: 3",
-	"License :: GPLv3",
+	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	'Topic :: Machine Learning',
 	'Programming Language :: Python :: 3.9'
 ]
