--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.9"
 classifiers = [
 	"Programming Language :: Python :: 3",
 	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-	'Topic :: Machine Learning',
+	'Topic :: Scientific/Engineering',
 	'Programming Language :: Python :: 3.9'
 ]
 
