--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-kneed==0.7.0
-matplotlib==3.4.3
-networkx==2.6.3
-numpy==1.20.3
-pandas==1.3.4
-pingouin==0.5.1
+kneed>=0.7.0
+matplotlib>=3.4.3
+networkx>=2.6.3
+numpy>=1.20.3
+pandas>=1.3.4
+pingouin>=0.5.1
 prince==0.7.0
-scikit-learn==1.0.2
-scipy==1.7.1
-seaborn==0.11.2
-shap==0.40.0
-statsmodels==0.13.2
-xgboost==1.5.2
+scikit-learn>=1.0.2
+scipy>=1.7.1
+seaborn>=0.11.2
+shap>=0.40.0
+statsmodels>=0.13.2
+xgboost>=1.5.2
