--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "clust-learn"
-version = "0.1.3"
+version = "0.1.4"
 authors = [
   { name="Miguel Alvarez-Garcia", email="malvarez.statistics@gmail.com" },
 ]
@@ -11,7 +11,9 @@ classifiers = [
 	"Programming Language :: Python :: 3",
 	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	'Topic :: Scientific/Engineering',
-	'Programming Language :: Python :: 3.9'
+	'Programming Language :: Python :: 3.9',
+	'Programming Language :: Python :: 3.10',
+	'Programming Language :: Python :: 3.11'
 ]
 
 [project.urls]
