--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
 ]
 description = "A Python package for explainable cluster analysis"
 readme = "README.md"
+requires = ["setuptools==68.2.2"]
 requires-python = ">=3.9"
 classifiers = [
 	"Programming Language :: Python :: 3",
