--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = [
 ]
 description = "A Python package for explainable cluster analysis"
 readme = "README.md"
-requires = ["setuptools==68.2.2"]
 requires-python = ">=3.9"
 classifiers = [
 	"Programming Language :: Python :: 3",
@@ -22,5 +21,5 @@ classifiers = [
 "Bug Tracker" = "https://github.com/malgar/clust-learn/issues"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools==68.2.2"]
+build-backend = "setuptools.build_meta"
