--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ classifiers = [
 	'Programming Language :: Python :: 3.10',
 	'Programming Language :: Python :: 3.11'
 ]
+dynamic = ["license", "dependencies"]
 
 [project.urls]
 "Homepage" = "https://github.com/malgar/clust-learn"
 "Bug Tracker" = "https://github.com/malgar/clust-learn/issues"
 
 [build-system]
-requires = ["setuptools==68.2.2"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
